menu button open and close fixed

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,4 +1,4 @@
-$primary-color: yellow;
+$primary-color: green;
 $secondary-color: purple; 
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
