--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -40,10 +40,21 @@
         transform: translate3d(100%, 0, 0);
 
         .portrait {
-            background: url(../dist/img/background.jpg);
-            width:150px;
-            height:150px;
+            background: url('../dist/img/IMG_1622\ copy.jpg');
+            width: 150px;
+            height: 150px;
         }
+    }
+
+    .about-info{
+        grid-template-areas: 
+        'bioimage'
+        'bio'
+        'job1'
+        'job2'
+        'job3';
+
+        grid-template-columns: 1fr;
     }
 }
 // Smartphones
