--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,10 +1,14 @@
 // Widescreens
 @include mediaXl {
-
+    .projects {
+        grid-template-columns: repeat(4, 1fr);
+    }
 }
 // Desktops & Laptops
 @include mediaLg {
-    
+    .projects {
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
 // Tablets & Small Laptops
 @include mediaMd {
@@ -54,6 +58,9 @@
         'job2'
         'job3';
 
+        grid-template-columns: 1fr;
+    }
+    .projects {
         grid-template-columns: 1fr;
     }
 }
