--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -64,7 +64,7 @@
         padding: 0;
         background: darken($primary-color, 5);
         list-style: none;
-        transform: translate3d(0, -100%, 0);
+        transform: translate3d(0, -100%, 0) rotate(-20deg);
         @include easeOut;
 
         &.show {
@@ -76,7 +76,7 @@
     // Branding Side
     &-branding {
         background: $primary-color;
-        transform: translate3d(0, 100%, 0);
+        transform: translate3d(0, 100%, 0) rotate(20deg);
         @include easeOut;
 
         &.show {
@@ -87,7 +87,7 @@
         .portrait {
             width: 250px;
             height: 250px;
-            background: url(../dist/img/background.jpg);
+            background: url(/dist/img/portrait.jpg);
             border-radius: 50%;
             border: solid 3px $secondary-color;
         }
