--- a/scss/main.scss
+++ b/scss/main.scss
@@ -83,6 +83,8 @@ main {
 
 .bio-image {
     grid-area: bioimage;
+    width: 250px;
+    height: 250px;
     margin: auto;
     border-radius: 50%;
     border: $secondary-color 3px solid;
