website complete without info

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,7 +1,7 @@
 $primary-color: rgb(172, 172, 46);
 $secondary-color: purple; 
 $show-home-image: true;
-$home-image: url(../img/background3.jpg);
+$home-image: url(../img/green.jpg);
 $background-opacity: 0.9;
 
 @mixin easeOut {
