--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -47,13 +47,13 @@
         visibility: visible;
     }
 
-    &-branding, 
+ 
     &-nav {
         display: flex;
         flex-flow: column wrap;
         align-items: center;
         justify-content: center;
-        float: left;
+        float: right;
         width: 50%;
         height: 100vh;
         overflow: hidden;
@@ -84,13 +84,7 @@
             transform: translate3d(0, 0, 0);
         }
 
-        .portrait {
-            width: 250px;
-            height: 250px;
-            background: url(/dist/img/portrait.jpg);
-            border-radius: 50%;
-            border: solid 3px $secondary-color;
-        }
+        
     }
 
     .nav-item {
