finished with content

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,5 +1,5 @@
 $primary-color: rgb(172, 172, 46);
-$secondary-color: purple; 
+$secondary-color: rgb(10, 196, 4); 
 $show-home-image: true;
 $home-image: url(../img/green.jpg);
 $background-opacity: 0.9;
