--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,7 +1,7 @@
-$primary-color: rgb(172, 172, 46);
-$secondary-color: rgb(10, 196, 4); 
+$primary-color: rgb(169, 206, 223);
+$secondary-color: rgb(4, 174, 196); 
 $show-home-image: true;
-$home-image: url(../img/green.jpg);
+$home-image: url(../img/blue.jpg);
 $background-opacity: 0.9;
 
 @mixin easeOut {
