--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,13 +1,13 @@
 // Widescreens
 @include mediaXl {
     .projects {
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(4, 1fr);
     }
 }
 // Desktops & Laptops
 @include mediaLg {
     .projects {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(3, 1fr);
     }
 }
 // Tablets & Small Laptops
@@ -59,5 +59,7 @@
 @include mediaSm {
     main#home h1 {
         margin-top: 10vh;
+        font-size: 70px;
+        text-align: left;
     }
 }
