--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -59,7 +59,30 @@
 @include mediaSm {
     main#home h1 {
         margin-top: 10vh;
-        font-size: 60px;
+        font-size: 50px;
         text-align: left;
+    }
+    h2 {
+        &.sm-heading{
+        font-weight: 300;
+    }}
+
+    .about-info{
+        grid-template-areas: 
+        'bioimage'
+        'bio'
+        'job1'
+        'job2'
+        'job3';
+
+        grid-template-columns: 1fr;
+    }
+    .projects {
+        grid-template-columns: 1fr;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        align-items: center;
+        margin-top: 1rem;
     }
 }
