--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
     --header-height: 3rem;
     --font-medium: 500;
 
-    --first-color: #5361ff;
+    --first-color: #27ca7ed2;
     --white-color: #fafaff;
     --dark-color: #2a3b47;
     --text-color: #697477;
@@ -208,10 +208,9 @@ img {
 }
 .home__container{
     height: calc(100vh - var(--header-height));
-    row-gap: 5rem;
 }
 .home__title {
-    align-self: flex-end;
+    align-self: flex-start;
     font-size: var(--big-font-size);
     color: var(--white-color);
     line-height: .8;
@@ -219,16 +218,12 @@ img {
 .home__title span {
     text-shadow: 0 20px 25px rgba(0,0,0,0.5);
 }
-.home__scroll{
-    writing-mode: vertical-lr;
-    transform: rotate(-180deg);
-    color: var(--white-color);
-}
+
 .home__img {
     position: absolute;
     right: 0;
     bottom: 0;
-    width: 295px;
+    width: 345px;
 }
 
 /*  About  */ 
@@ -242,6 +237,7 @@ img {
     display: flex;
     justify-content: center;
     padding-top: 1rem;
+    padding-left: 1rem;
     width: 120px;
     height: 120px;
     background-color: var(--first-color);
@@ -250,7 +246,7 @@ img {
 }
 
 .about__img img {
-    width: 100px;
+    width: 160px;
 }
 
 .about__subtitle {
@@ -295,6 +291,7 @@ img {
     background-color: var(--first-color);
     color: var(--white-color);
 }
+
 .skills__img img {
     border-radius: .5rem;
 }
@@ -346,22 +343,66 @@ img {
     row-gap: 2rem;
     text-align: center;
 }
+.about__profession-span{
+    font-size: 23px;
+}
 
 /*  Contact  */
 .contact__container{
-    row-gap: 2rem;
+    row-gap: 0;
 }
 .contact__subtitle {
     font-size: 25px;
     color: var(--first-color);
 }
-.contact__text{
-    display: inline-block;
-    margin-bottom: var(--mb-2);
-    font-size: 20px;
+
+.middle {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
-.contact__info {
-    margin: 40px; 
+
+.card {
+    cursor: pointer;
+    width: 300px;
+    height: 120px;
+    margin-bottom: 3em; 
+}
+
+.front, .back {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    backface-visibility: hidden;
+    position: absolute;
+    transition: transform .6s linear;
+    padding: 2rem; 
+}
+
+.front p{
+    font-size: 30px;
+}
+
+.front{
+    transform: perspective(600px) rotateY(0deg);
+    background-color: var(--first-color);
+    text-align: center;
+}
+
+.back{
+    background: rgba(5, 5, 5, 0.897);
+    color: white;
+    transform: perspective(600px) rotateY(180deg);
+    backdrop-filter: blur(50px);
+}
+
+.card:hover > .front {
+    transform: perspective(600px) rotateY(-180deg);
+}
+
+.card:hover > .back {
+    transform: perspective(600px) rotateY(0deg);
 }
 
 
@@ -433,7 +474,7 @@ img {
         height: 200px;
     }
     .about__img img{
-        width: 165px;
+        width: 265px;
     }
     
     .skills__container{
@@ -457,9 +498,10 @@ img {
     .contact__container{
         grid-template-columns: repeat(3, 1fr);
         justify-items: center;
-        height: 50vh;
+        height: 60vh;
         justify-content: center;
         align-items: center;
+        align-content: center;
     }
 
     .footer__container{
