--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -352,14 +352,7 @@ img {
 
 /*  Contact  */
 .contact__container{
-    row-gap: 0;
-}
-
-.middle {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    row-gap: 2rem;
 }
 
 .card {
