--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,6 @@
     --body-font:'Padauk', sans-serif;
     --big-font-size: 6.25rem;
     --h2-font-size: 1.25rem;
-
     --small-font-size: .813rem;
 }
 
@@ -20,7 +19,6 @@
     :root {
         --big-font-size: 10.5rem;
         --h2-font-size: 2rem;
-
         --small-font-size: .875rem;
     }
 }
@@ -347,53 +345,20 @@ img {
 /*  Contact  */
 .contact__container{
     row-gap: 2rem;
+    height: 70vh;
     justify-items: center;
     align-items: center;
 }
 
-.card {
-    cursor: pointer;
-    width: 300px;
-    height: 120px;
-    margin-bottom: 3em; 
-    text-align: center;
-
-}
-
-.front, .back {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    backface-visibility: hidden;
-    position: absolute;
-    transition: transform .6s linear;
-    padding: 2rem; 
-}
-
-.front p{
-    font-size: 40px;
-}
-
-.front{
-    transform: perspective(600px) rotateY(0deg);
-    background-color: var(--first-color);
+.contact__item h2 {
+    color: var(--first-color);
     text-align: center;
 }
 
-.back{
-    background: rgba(5, 5, 5, 0.897);
-    color: white;
-    transform: perspective(600px) rotateY(180deg);
+.contact__container .contact__item {
+    text-align: center;
+    align-content: center;
 }
-
-.card:hover > .front {
-    transform: perspective(600px) rotateY(-180deg);
-}
-
-.card:hover > .back {
-    transform: perspective(600px) rotateY(0deg);
-}
-
 
 /*  Footer  */
 .footer {
@@ -405,6 +370,7 @@ img {
 }
 
 @media screen and (min-width: 768px) {
+
     body{
         margin: 0;
     }
@@ -486,7 +452,7 @@ img {
 
     .contact__container{
         grid-template-columns: repeat(3, 1fr);
-        height: 60vh;
+        height:60vh;
     }
 
     .footer__container{
