--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,12 +163,8 @@ img {
 
 .nav__logo {
     color: var(--white-color);
-    text-decoration: none;
 }
 
-.nav a{
-    text-decoration: none;
-}
 
 .nav__toggle {
     color: var(--white-color);
@@ -203,6 +199,7 @@ img {
 }
 .home__container{
     height: calc(100vh - var(--header-height));
+    row-gap: 5rem;
 }
 .home__title {
     align-self: flex-start;
@@ -232,7 +229,6 @@ img {
     display: flex;
     justify-content: center;
     padding-top: 1rem;
-    padding-left: 1rem;
     width: 120px;
     height: 120px;
     background-color: var(--first-color);
@@ -266,7 +262,7 @@ img {
 }
 
 /*  Skills  */
-.skills_container {
+.skills__container {
     row-gap: 2rem;
 }
 .skills__subtitle {
@@ -350,6 +346,10 @@ img {
     align-items: center;
 }
 
+.contact__text {
+    display: inline-block;
+}
+
 .contact__item h2 {
     color: var(--first-color);
     text-align: center;
@@ -368,6 +368,8 @@ img {
 .footer__container{
     justify-items: center;
 }
+
+/* MEDIA QUERIES */
 
 @media screen and (min-width: 768px) {
 
@@ -452,6 +454,7 @@ img {
 
     .contact__container{
         grid-template-columns: repeat(3, 1fr);
+        justify-items: center;
         height:60vh;
     }
 
