text-color changed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
     --first-color: #27ca7ed2;
     --white-color: #fafaff;
     --dark-color: #2a3b47;
-    --text-color: #697477;
+    --text-color: #1a1c1d;
 
     --body-font:'Padauk', sans-serif;
     --big-font-size: 6.25rem;
